<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/planNameToAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:hint="@string/nazwa_planu"
        android:inputType="text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#333333"
        android:textSize="20sp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/parent_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="180dp"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="16dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/addNewPlanRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="434sp"
            android:background="@color/black" />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addExerciseToPlan"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_style_round"
        android:backgroundTint="@color/colorTextIcons"
        android:drawableEnd="@drawable/ic_baseline_add_circle_24"
        android:padding="20dp"
        android:text="Dodaj ćwiczenie z biblioteki"
        android:textColor="@color/white"
        android:textSize="12sp"
        card_view:layout_constraintBottom_toTopOf="@+id/submitPlan"
        card_view:layout_constraintEnd_toStartOf="@+id/addCustomExercise"
        card_view:layout_constraintHorizontal_bias="0.205"
        card_view:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addCustomExercise"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_style_round"
        android:backgroundTint="@color/colorTextIcons"
        android:drawableEnd="@drawable/ic_baseline_add_circle_24"
        android:padding="20dp"
        android:text="Dodaj własne ćwiczenie"
        android:textColor="@color/white"
        android:textSize="12sp"
        card_view:layout_constraintBottom_toTopOf="@+id/submitPlan"
        card_view:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitPlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_style_round"
        android:backgroundTint="@color/colorDivider"
        android:drawableEnd="@drawable/ic_baseline_check_24"
        android:padding="20dp"
        android:text="@string/potwierdz"
        android:textColor="@color/white"
        android:textSize="15sp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>