<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mój Fizjo</string>
    <string name="app_icon">Ikona</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zapisz">Zapisz</string>
    <string name="anuluj">Anuluj</string>
    <string name="potwierdz">Potwierdź</string>
    <string name="zatwierdz">Zatwierdź</string>
    <string name="potwierdz_operacje">Potwierdź operację</string>
    <string name="pomin">Pomiń</string>
    <string name="jezyk">pl</string>
    <string name="caption">podpis</string>
    <string name="wyszukaj">Wyszukaj</string>

...
    <string name="kroki">kroki!</string>
    <string name="krokow">kroków!</string>
    <string name="trenujesz">Trenujesz</string>
    <string name="piles_wode">Pamiętałeś o piciu wody</string>
    <string name="dni_pod_rzad">dni pod rząd!</string>

    <string name="poniedzialek">poniedziałek</string>
    <string name="wtorek">wtorek</string>
    <string name="sroda">środa</string>
    <string name="czwartek">czwartek</string>
    <string name="piatek">piątek</string>
    <string name="sobota">sobota</string>
    <string name="niedziela">niedziela</string>

</resources>
