...
        android:autofillHints=""
        android:hint="@string/nazwa_cwiczenia"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575" />
    <EditText
        android:id="@+id/dialog_sets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
...
        android:hint="@string/liczba_powtorzen"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/dialog_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
...
