...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Fragment.ExerciseViewFragment">

    <TextView
        android:id="@+id/registration_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:text="@string/cwiczenie"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
...
