...
<!--    <item-->
<!--        android:id="@+id/search"-->
<!--        android:icon="@drawable/ic_baseline_search_24"-->
<!--        android:title="@string/wyszukaj"-->
<!--        app:showAsAction="ifRoom" />-->
    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/twoje_konto"
        app:showAsAction="ifRoom" />

</menu>
