...
        android:textSize="20sp" />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/remind_hour_before_training"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/dialog_border_style"
            android:contentDescription="@string/godzina"
            tools:ignore="DuplicateSpeakableTextCheck" />

...
